[tool.poetry]
name = "olimpyc-games"
version = "0.1.0"
description = ""
authors = ["Luiz Artur <luiz.lamoglia@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
sqlalchemy = "^2.0.35"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
